jk's own code, tests, manifests and installers describe one build
With one build in the tree, every place that named the other one as a second reader, a second
runner or a second producer states what is true now:

- RepoRoot finds the checkout by jk.toml beside jk-lock.toml (the lock lives at the workspace
  root only); WireTokenParityTest uses it instead of its own walk to a settings script.
- Three tests only ever ran under the Gradle build, because the property they assumed on was set
  by a Gradle task and nothing else, so under jk they were permanently skipped. They are deleted,
  and what they protected has a jk-side owner: PublishedWorkerPomTest and
  PublishedSdkConsumerTest guarded a worker or SDK POM naming a coordinate no repository serves,
  which is G19 published-poms over every POM jk packages, plus scripts/test-publish-maven-repo.sh
  for the staged repository and every forked-worker integration test that launches from the POM
  jk writes; PublishedWorkerBoundaryTest guarded a server module on the publisher's POM, which
  G54 plugin-sdk-boundary forbids at the manifest the POM is rendered from.
- The SDK a scaffolded plugin compiles against is jk's own version: jk install shelves
  jk-plugin-sdk at the workspace version, and that is what jumpkick.build/repo serves, so
  NewJkBuildRenderer pins JkVersion.VERSION and PluginSdkScaffoldVersionTest holds it there.
- GuardExtensionTest compiles at jk-guards-junit's release 17: a JDK-17 library's tests are
  compiled at the module's level, so a JDK-21 List API in them is red here where a test compile
  at a higher release let it through.
- The nullness comment block in every module manifest, the CLI manifest's notes on test wiring,
  the engine's test-environment and launcher comments, the installers' hint and fqcn-baseline's
  instructions name jk's own steps (`jk install`, the run-tests step, a module-rooted run) rather
  than a task of the other build.

The lock's manifests digest follows the manifest edi